# shuddhalekhan

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  build.py  components.json  electron.vite.config.ts  eslint.config.js  eslint.config.mjs  index.html  main.py  opencode.json  package.json  preview.md  pyproject.toml  release-notes.md  tsconfig.json  vite.agent.config.ts
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  opencode.yml  release.yml
app/: __init__.py  config.py  hotkey.py  main.py  model.py  recorder.py  text_injector.py  tray.py
assets/: check_python_312.cmd
docs/: agent-mcp-lifecycle-todo.md  agent-mode-implementation-plan.md
docs/adr/: 0001-vercel-ai-sdk-for-agent-runtime.md  0002-remove-gmail-mcp-preset-and-defer-client-oauth.md
docs/superpowers/plans/: 2026-05-09-agent-mcp-startup-and-empty-response.md  2026-05-11-recording-session.md  2026-05-12-multilingual-support.md  2026-05-14-remove-mcp-presets-and-client-oauth.md
installer/: shuddhalekhan.iss
scripts/: verify-whisper-endpoint.ts
src/: AgentResponsePopup.css  AgentResponsePopup.tsx  App.css  App.tsx  ApprovalPopup.css  ApprovalPopup.tsx  RecordingPopup.css  RecordingPopup.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  audio.rs  config.rs  hotkey.rs  keyboard.rs  lib.rs  main.rs  tray.rs  volume.rs  whisper.rs
src/agent/: audit.ts  index.ts  mcp-registry.ts  mcp-server-config.ts  oauth-provider.ts  protocol.ts  runtime.ts
src/agent/__tests__/: audit.test.ts  mcp-registry.test.ts  mcp-server-config.test.ts  protocol.test.ts  runtime.test.ts
src/hooks/: useRecording.ts
src/lib/: config.ts  hotkeys.ts  tray.ts  whisperClient.ts
src/main/: agent-sidecar.ts  agent-toast-window.ts  audio-window.ts  config.ts  index.ts  inject-text.ts  recording-pill.ts  recording-session.ts  settings-window.ts  sidecar-config-policy.ts  sidecar-event-router.ts  tray.ts  updater.ts  whisper.ts  window-factory.ts
src/main/__tests__/: agent-sidecar.test.ts  agent-toast-window.test.ts  audio-window.test.ts  config.test.ts  index.test.ts  inject-text.test.ts  keyboard.test.ts  recording-pill.test.ts  recording-session.test.ts  settings-window.test.ts  sidecar-config-policy.test.ts  sidecar-event-router.test.ts  tray.test.ts  updater.test.ts  whisper.test.ts  window-factory.test.ts
src/main/native/: clipboard.ts  keyboard.ts
src/preload/: index.ts
src/preload/__tests__/: index.test.ts
src/renderer/: AgentToast.tsx  App.css  App.tsx  RecordingPopup.css  RecordingPopup.tsx  SettingsWindow.tsx  audio-capture.ts  index.css  index.html
src/renderer/__tests__/: audio-capture.test.ts
src/renderer/components/ui/svgs/: windows.tsx
src/renderer/settings/: McpSettings.tsx  mcp-settings-model.ts  settings-ipc.ts
src/renderer/settings/__tests__/: mcp-settings-model.test.ts  settings-ipc.test.ts
src/test/: bun-test.d.ts  electron-mock.ts
src/types/: ipc.ts
ts-version/: README.md  build-headless.ps1  package.json
ts-version/src/: agent-service.ts  audio-device-manager.ts  audio-recorder.ts  browser-tools.ts  config.ts  confirmation-dialog.ts  hitl-bridge.ts  hotkey-manager.ts  index.ts  logger.ts  text-injector.ts  tool-executor.ts  tray-manager.ts  whisper-client.ts
