[package]
name = "speech-2-text"
version = "2.2.0"
description = "Speech-to-text system tray application using Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "speech_2_text_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17"
winput = "0.2"
reqwest = { version = "0.12", features = ["multipart", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
rdev = "0.5"
regex = "1.10"
once_cell = "1.19"
dasp_interpolate = { version = "0.11.0", optional = true }
tauri-plugin-dialog = "2"
adk-rust = { version = "0.4.0", default-features = false, features = ["ollama", "agents", "tools", "models", "runner", "sessions"] }
schemars = "0.8"
xcap = "0.9.1"
open = "5.3.3"
adk-tool = "0.4.0"
adk-core = "0.4.0"
async-trait = "0.1.89"
tokio-stream = "0.1.18"
adk-runner = "0.4.0"
adk-session = "0.4.0"

[features]
dasp_interpolate = ["dep:dasp_interpolate"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_System_Com", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints"] }

